build/production/media-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-api
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: media-api
  template:
    metadata:
      labels:
        app: media-api
    spec:
      containers:
      - name: media-api
        image: 887044485231.dkr.ecr.eu-west-1.amazonaws.com/core-api:latest
        command: ["node"]
        args: ["core/main.js"]
        readinessProbe:
          httpGet:
            path: /health-check
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 2
          periodSeconds: 15
          successThreshold: 1
          failureThreshold: 1
        resources:
          requests:
            memory: "200Mi"
            cpu: "250m"
          limits:
            memory: "700Mi"
            cpu: "1"
        ports:
        - containerPort: 80
