build/production/media-api/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: media-api-service
  namespace: production
spec:
  selector:
    app: media-api
  type: ClusterIP
  ports:
  - name: node
    port: 80
    targetPort: 8081
