build/production/media-api/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # Docs: https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations

    # Maximum request body size
    nginx.ingress.kubernetes.io/proxy-body-size: "8k"

    # Timeout for communicating with service (in seconds)
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"

    # Rate limiting
    # limit-rpm = limit each IP address to X requests per minute
    # limit-whitelist = do not rate limit clients in the IP range
    nginx.ingress.kubernetes.io/limit-rpm: "1000"
    # nginx.ingress.kubernetes.io/limit-whitelist: "comma separated list of CIDRs"

  name: media-api-ingress
  namespace: production
  labels:
    app: "media-api"
spec:
  rules:
    - host: media-api.rfcx.org
      http:
        paths:
          - backend:
              serviceName: media-api-service
              servicePort: 80
